--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,11 +12,13 @@
     android:weightSum="100"
     tools:context=".Login">
 
-    <ImageView
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/hermes_trans"
-        android:layout_weight="10"
+        android:text="Hermes"
+        android:textSize="@dimen/_50sdp"
+        android:fontFamily="@font/corin"
+
         />
     <LinearLayout
         android:layout_width="match_parent"
@@ -67,7 +69,7 @@
     <ImageView
         android:layout_width="@dimen/_110sdp"
         android:layout_height="@dimen/_110sdp"
-        android:src="@drawable/phone_vin"
+        android:src="@drawable/phone"
         android:layout_weight="20"
         app:tint="@color/brown"
         />
@@ -75,8 +77,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Enter Mobile Number"
+        android:textAlignment="center"
         android:textStyle="bold"
-        android:layout_gravity="center_vertical"
+        android:fontFamily="@font/segoesc"
+        android:layout_gravity="center"
         android:letterSpacing="0.08"
         android:textSize="@dimen/_20sdp"
 
@@ -124,6 +128,7 @@
             android:layout_height="wrap_content"
             android:text="Send OTP"
             android:backgroundTint="@color/brown"
+            android:fontFamily="@font/segoesc"
             
             />
         <ProgressBar
@@ -134,12 +139,5 @@
             android:layout_gravity="center"
             />
     </LinearLayout>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Resend OTP in 30 seconds"
-        android:id="@+id/resend_otp"
-        android:layout_weight="10"
-        />
+
 </LinearLayout>
