--- a/app/src/main/res/layout/activity_login_name.xml
+++ b/app/src/main/res/layout/activity_login_name.xml
@@ -12,11 +12,13 @@
     android:weightSum="100"
     tools:context=".Login">
 
-    <ImageView
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/hermes_trans"
-        android:layout_weight="10"
+        android:text="Hermes"
+        android:textSize="@dimen/_50sdp"
+        android:fontFamily="@font/corin"
+
         />
     <LinearLayout
         android:layout_width="match_parent"
@@ -67,7 +69,7 @@
     <ImageView
         android:layout_width="@dimen/_110sdp"
         android:layout_height="@dimen/_110sdp"
-        android:src="@drawable/username"
+        android:src="@drawable/profile"
         android:layout_weight="20"
         app:tint="@color/brown"
         />
@@ -75,8 +77,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Enter Your Username"
+        android:fontFamily="@font/segoesc"
         android:textStyle="bold"
-        android:layout_gravity="center_vertical"
+        android:textAlignment="center"
+        android:layout_gravity="center"
         android:letterSpacing="0.08"
         android:textSize="@dimen/_20sdp"
 
@@ -116,6 +120,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Enter username"
+            android:fontFamily="@font/segoesc"
             android:backgroundTint="@color/brown"
 
             />
