--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,18 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/cream"
-    tools:context=".ProfileFragment">
+    tools:context=".ProfileFragment"
+    android:orientation="vertical"
+    android:gravity="center"
+    android:padding="@dimen/_10sdp">
 
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Profile Screen"
-        android:textSize="@dimen/_30sdp"
-        android:layout_centerInParent="true"
+    <ImageView
+        android:id="@+id/profile_image_view"
+        android:layout_width="@dimen/_150sdp"
+        android:layout_height="@dimen/_150sdp"
+        android:src="@drawable/username"
+        android:background="@drawable/circluar_bg"
+        app:tint="@color/brown"
+        android:scaleType="fitCenter"
+        android:layout_marginBottom="@dimen/_15sdp"
         />
+    
+    <EditText
+    android:id="@+id/edit_username"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="@dimen/_10sdp"
+    android:hint="Username"
+    android:inputType="text"
+    android:padding="@dimen/_10sdp"
+    android:background="@drawable/input_box_rounded"
+    android:elevation="5dp"/>
 
-</RelativeLayout>
+    <EditText
+        android:id="@+id/edit_phone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/_10sdp"
+        android:hint="Phone"
+        android:inputType="text"
+        android:padding="@dimen/_10sdp"
+        android:background="@drawable/input_box_rounded"
+        android:elevation="5dp"
+        android:enabled="false"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center_vertical"
+        android:layout_marginTop="@dimen/_10sdp">
+
+        <Button
+            android:id="@+id/update_profile_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Update Profile"
+            android:fontFamily="@font/segoesc"
+            android:backgroundTint="@color/brown"
+
+            />
+        <ProgressBar
+            android:id="@+id/update_profile_progressbar"
+            android:layout_width="@dimen/_32sdp"
+            android:layout_height="wrap_content"
+            android:indeterminateTint="@color/brown"
+            android:layout_gravity="center"
+            />
+    </LinearLayout>
+
+    
+    
+</LinearLayout>
